<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="316dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="0dp" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#DADADA" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="0dp"
                android:background="#598e96"
                android:text="@string/collection"
                android:textColor="#fff"
                android:textSize="25sp" />
        </LinearLayout>

        <ListView
            android:id="@+id/productsId"
            android:layout_width="match_parent"
            android:layout_height="283dp"
            android:layout_marginLeft="0dp"
            android:choiceMode="singleChoice" >
        </ListView>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#598e96" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#598e96"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="0dp"
                android:text="@string/date_"
                android:textColor="#fff"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/startDate"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/st"
                    style="@android:style/Widget.EditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="0.34"
                    android:text="" />

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"
                    android:clickable="true"
                    android:contentDescription="@string/image"
                    android:src="@drawable/ic_action_calendar" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint=""
                    android:text="@string/EndDate"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/ed"
                    style="@android:style/Widget.EditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_weight="0.34"
                    android:text="" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/image"
                    android:src="@drawable/ic_action_calendar" />
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:layout_marginTop="2dp"
                android:background="#DADADA" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:textSize="25sp" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginTop="10dp"
                    android:background="#598e96"
                    android:text="@string/search_by"
                    android:textColor="#fff"
                    android:textSize="25sp" />
            </LinearLayout>

            <RadioGroup
                android:id="@+id/radioSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="1dp" >

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/boundingbox" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/location" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/city" />
            </RadioGroup>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="#598e96" />

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="10dp"
                android:background="#598e96"
                android:text="@string/search"
                android:textColor="#fff"
                android:textSize="25sp" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="5" >

        <LinearLayout
            android:id="@+id/hidegoogleMap"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:visibility="visible" >

            <fragment
                android:id="@+id/googleMap"
                android:name="com.google.android.gms.maps.MapFragment"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />
        </LinearLayout>

        <ListView
            android:id="@+id/listView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:visibility="gone" >
        </ListView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/Button01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:text="@string/prev"
                android:visibility="gone" />

            <Button
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:text="@string/next" />

            <Button
                android:id="@+id/prev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignTop="@+id/next"
                android:text="prev" />
        </RelativeLayout>
    </FrameLayout>

</LinearLayout>