<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_dialog"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="80dp"
        android:layout_height="86dp"
        android:layout_marginRight="5dp"
        android:adjustViewBounds="true"
        android:padding="6dp" >

        <ImageView
            android:id="@+id/badge"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:adjustViewBounds="true"
            android:background="@drawable/satellite"
            android:contentDescription="@string/image"
            android:padding="4dp" >
        </ImageView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text=""
            android:textColor="#ff000000"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shortname"
                android:textColor="#ff000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/snippet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text=""
                android:textColor="#ff7f7f7f"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SerialIdentifier"
                android:textColor="#ff000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/serialIdentifier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="#ff7f7f7f"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orbityDirection"
                android:textColor="#ff000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/orbitDirection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text=""
                android:textColor="#ff7f7f7f"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/OrbiteType"
                android:textColor="#ff000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/orbiteType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text=""
                android:textColor="#ff7f7f7f"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/image"
        android:src="@drawable/arrow" />

</LinearLayout>