<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="0dp"
            android:background="#598e96"
            android:text="Search Dataset Series"
            android:textColor="#fff"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/searchTerms"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/searchTerms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="vegetation" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/OrganisationName"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/organisationName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="esa" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subject"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/subject" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Platform"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/eoplatform"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="envisat" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Instrument"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/eoinstrument"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="asar" />

        <CheckBox
            android:id="@+id/displayOption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Option" />

        <LinearLayout
            android:id="@+id/option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone" >

            <EditText
                android:id="@+id/startDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="startDate"
                android:inputType="date" />

            <EditText
                android:id="@+id/endDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="endDate"
                android:inputType="date" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <Button
            android:id="@+id/find"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="#598e96"
            android:text="Search "
            android:textColor="#fff" />
    </LinearLayout>

    <LinearLayout
        android:layout_height="fill_parent"
        android:layout_weight="4"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/CollectionListView"
            android:layout_width="wrap_content"
            android:layout_weight="3"
            android:padding="2dp" >
        </ListView>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="0.12"
            android:background="#598e96" >

            <ImageButton
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/righticon"
                android:text="@string/next" />
            
            <ImageButton
                android:id="@+id/prev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignTop="@+id/next"
                android:src="@drawable/lefticon"
                android:text="prev" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>